--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -79,7 +79,7 @@
             $('#img img').attr('src','/Public/home/images/contact_us_en.jpg');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
-            "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
+            "©&nbsp;Maison Capital  All Rights Reserved&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html?status=1' style='text-decoration: none;color: #fff'>Terms of Use</a></div>");
             $('#top').empty();
             $('#top').append("<div style='text-align: right'><a href='contact.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='contact.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
             "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;color: #9b761d' id='contact'>CONTACTS</a></li>" +
