--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -109,7 +109,7 @@
                     if (len > 0) {
                         $("div.holder").jPages({
                             containerID: "news_list",
-                            pause: 4000,
+                            pause: false,
                             previous: "previous",
                             next: "next",
                             delay: 30,
@@ -133,7 +133,7 @@
                     if (len > 0) {
                         $("div.holder").jPages({
                             containerID: "news_list",
-                            pause: 4000,
+                            pause: false,
                             previous: "上一页",
                             next: "下一页",
                             delay: 30,
